--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cypress": "^3.0.1",
     "fs-extra": "^6.0.1",
     "html-webpack-plugin": "^2.30.1",
+    "start-server-and-test": "^1.7.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
   }
